Closed
Bug 1007458
Opened 12 years ago
Closed 12 years ago
Crash passing a cross-origin window object as an "argument" to showModalDialog
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
mozilla32
| Tracking | Status | |
|---|---|---|
| firefox32 | --- | verified |
People
(Reporter: jruderman, Assigned: bzbarsky)
Details
(Keywords: assertion, crash, testcase)
Crash Data
Attachments
(3 files)
###!!! ASSERTION: bad param: 'value', file /Users/jruderman/trees/mozilla-central/js/xpconnect/src/nsXPConnect.cpp, line 1009
Followed by a crash [@ XPCVariant::VariantDataToJS]
| Reporter | ||
Comment 1•12 years ago
|
||
| Assignee | ||
Comment 2•12 years ago
|
||
Attachment #8419475 -
Flags: review?(bugs)
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Comment 3•12 years ago
|
||
Comment on attachment 8419475 [details] [diff] [review]
Actually check for errors when converting a Value to a variant in showModalDialog
I guess this is fine. Edge case in an API we want to get rid of anyway.
Attachment #8419475 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
Flags: in-testsuite?
Comment 5•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 6•12 years ago
|
||
Repro in Nightly 2014-05-08-mozilla-central-debug.
Verified fixed Nightly 32.0a1 2014-05-27-mozilla-central-debug, Win 7 x64.
Status: RESOLVED → VERIFIED
status-firefox32:
--- → verified
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•