Bug 1007458.  Actually check for errors when converting a Value to a variant in showModalDialog.  r=smaug